Updated CSS on manage_event and create_org. Cropped photos in slideshow to stop resizing and to for it to be more responsive.

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -10,16 +10,7 @@ h3 {
 .slideshow-text {
   color: #292b2c;
 }
-#oahu {
-  top: -180px;
-}
-#garbage {
-  top: -400px;
-}
-.slideshow-container {
-  object-fit: contain;
-  height: 613px;
-}
+
 footer {
   background: #292b2c;
   color: white;
